# Reconfigurable-Neural-Network

./: README.md
FuncAnalyze/: functional_lib.cpp  functional_lib.h
ReconfigurableNN/: reconfigurable_nn.cpp  reconfigurable_nn.hpp
example_titanic_task/: main.cpp
neural_network_lib/: NeuralModel.cpp  NeuralModel.hpp  neural_network.cpp  neural_network.hpp
titanic_task/: CMakeLists.txt  main.cpp
